@@ -97,10 +97,10 @@ function show_users_list ($result) {
 		echo '<td width="15%" style="text-align:center">';
 		echo ($usr['add_date'] ? date(_('Y-m-d H:i'), $usr['add_date']) : '-');
 		echo '</td>';
-		echo '<td width="15%" style="text-align:center"><a href="'.$GLOBALS['sys_urlprefix'].'/developer/?form_dev='.$usr['user_id'].'">[' ._('DevProfile'). ']</a></td>';
-		echo '<td width="15%" style="text-align:center"><a href="userlist.php?action=activate&amp;user_id='.$usr['user_id'].'">[' ._('Activate'). ']</a></td>';
-		echo '<td width="15%" style="text-align:center"><a href="userlist.php?action=delete&amp;user_id='.$usr['user_id'].'">[' ._('Delete') .']</a></td>';
-		echo '<td width="15%" style="text-align:center"><a href="userlist.php?action=suspend&amp;user_id='.$usr['user_id'].'">[' ._('Suspend'). ']</a></td>';
+		echo '<td width="15%" style="text-align:center">'.util_make_link ('/developer/?form_dev='.$usr['user_id'],_('[DevProfile]')).'</td>';
+		echo '<td width="15%" style="text-align:center">'.util_make_link ('/admin/userlist.php?action=activate&amp;user_id='.$usr['user_id'],_('[Activate]')).'</td>';
+		echo '<td width="15%" style="text-align:center">'.util_make_link ('/admin/userlist.php?action=delete&amp;user_id='.$usr['user_id'],_('[Delete]')).'</td>';
+		echo '<td width="15%" style="text-align:center">'.util_make_link ('/admin/userlist.php?action=suspend&amp;user_id='.$usr['user_id'],_('[Suspend]')).'</td>';
 		echo '</tr>';
 		$count ++;
 	}
